# cadre

./: .gitignore  CADRE-VS-PAPERCLIP.md  ENTITY-DESIGN.md  LANDSCAPE.md  MEMBERS-DESIGN.md  NAMING.md  PLANNING.md  PULSE-SPEC.md  README.md  pyproject.toml
.github/workflows/: tests.yml
.paul/: PROJECT.md  ROADMAP.md  STATE.md  paul.json
.paul/handoffs/archive/: HANDOFF-2026-04-15-phase2-research.md  HANDOFF-2026-04-15-phase2-session-pulse.md  HANDOFF-2026-04-15-phase2-unit-completion.md
.paul/phases/01-schema-storage/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.paul/phases/02-hook-layer/: 02-01-BRIEF.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
.paul/phases/03-core-slash-commands/: 03-01-BRIEF.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
claude/: cadre.md
claude/cadre-framework/checklists/: scaffold-checklist.md  verify-checklist.md
claude/cadre-framework/frameworks/: firm-anatomy.md  gotchas.md  org-design.md
claude/cadre-framework/tasks/: audit-firm.md  charter.md  disciplines.md  scaffold-firm.md  seed.md  verify.md
claude/cadre-framework/templates/: charter-template.md  seed-template.md
docs/: CHAT-RAIL-SETUP.md  ENGINEERING.md  FIRM-SCAFFOLDING-GUIDE.md  HOSTNAMES-SETUP.md  MCP-TO-CLI-MIGRATION.md  SLACK-RAIL-SETUP.md  TAILSCALE-SETUP.md  adapters.md  contracts.md
install/: firm-session-pulse.py  hook-installer.py
scripts/: backfill_chief_of_staff_deliverables.py  e2e-test.sh  repattern_chief_of_staff.py
src/firm/: __init__.py  __main__.py  notify.py  seed.py  seed_demo.py  seedkit.py
src/firm/cli/: backup.py  board.py  doctor.py  env.py  escalation.py  goal.py  heartbeat.py  init.py  install_hooks.py  member.py  notify.py  pulse.py  rail_chat.py  rail_slack.py  roll.py  run.py  templates.py  unit.py
src/firm/commands/: member_dispatch.py
src/firm/contracts/: __init__.py  claude_code.py  dispatch.py  interface.py  registry.py
src/firm/core/: db.py  libsql_compat.py  migrate.py  repo.py  snapshot.py  units.py
src/firm/dashboard/: __init__.py  auth.py  boardroom.py  calibration.py  coboard.py  discovery.py  exclusions.py  founding.py  hub_extensions.py  index.html  inventory.py  launch.py  server.py  wiring.py
src/firm/heuristics/: __init__.py  gaps.py
src/firm/hooks/: __init__.py  _redact.py  (+5 more)
templates/adapters/: README.md  codex_stub.py  openclaw_stub.py
templates/contracts/: README.md  codex_stub.py  openclaw_stub.py
tests/: conftest.py  test_authority.py  test_calibration_ladder.py  test_cli_heartbeat.py  test_cli_pulse.py  test_cli_roll.py  test_cli_templates.py  test_dashboard.py  test_dashboard_auth.py  test_db.py  test_dblock.py  test_discovery.py  test_e2e_quill.py  test_entity_business.py  test_equip.py  test_floor.py  test_gap_detection.py  test_gen_spend.py  test_hierarchy.py  test_hub.py  test_hub_extensions.py  test_init.py  test_installer.py  test_inventory.py  test_launch.py  test_libsql_compat.py  test_loadout_consolidation.py  test_mcp_tools.py  test_member_dispatch.py  test_migrate.py  test_notify.py  test_preflight.py  test_pulse_hardening.py  test_pulse_orchestrator.py  test_pulse_prompt.py  test_pulse_runner.py  test_pulse_spawn.py  test_pulse_validate.py  test_rail_chat.py  test_rail_slack.py  (+14 more)
tests/cli/: test_doctor_deliverables.py  test_run.py  test_unit.py  test_unit_create.py
tests/contracts/: test_claude_code.py  test_dispatch.py  test_interface.py  test_registry.py
tests/golden/: session-pulse-chrisai.txt
tests/hooks/: test_policy_gate.py  test_run_record.py  test_session_pulse.py  test_session_pulse_e2e.py  test_unit_completion.py
tests/services/: test_comment_service.py  test_contract_service.py  test_document_service.py  test_escalation_service.py  test_firm_service.py  test_gate_service.py  test_goal_service.py  test_id.py  test_member_service.py  test_operation_service.py  test_policy_ingest.py  test_policy_service.py  test_project_service.py  test_pulse_queue.py  test_records.py  test_register_deliverable.py  test_unit_service.py  test_validate.py
(+94 files in other folders)
