[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firm"
version = "0.1.0"
description = "A standalone framework for orchestrating a company of AI Members"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Chris Kahler" }
]
keywords = ["claude-code", "agents", "framework", "firm", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
firm = "firm.__main__:main"

[project.urls]
Homepage = "https://github.com/chriskahler/agent-company-architecture"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firm = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
