[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadre"
version = "0.1.0"
description = "Cadre — Coordinated Agent Deployment Runtime Engine. A standalone framework for orchestrating an AI Firm of Members, Goals, Operations, and Units."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Chris Kahler" }
]
keywords = ["claude-code", "agents", "framework", "firm", "mcp", "cadre"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# mcp is the firm MCP server's SDK (firm.mcp.tools imports FastMCP). It was
# never declared, so `pip install -e cadre` produced firm venvs whose MCP
# server died at import (ModuleNotFoundError: mcp) — silently, because claude
# swallows MCP-server stderr. Three of four firms shipped broken (wastelander
# ESC-004/RUN-051, 2026-07-08..10); only chrisai worked, via a manual install.
dependencies = [
  "mcp>=1.0",
  # Vault encryption (Fernet). Imported lazily — every non-vault surface
  # works without it, but installs get it so the vault works out of the box.
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
cadre = "firm.__main__:main"
firm = "firm.__main__:main"

[project.urls]
Homepage = "https://github.com/ChristopherKahler/cadre"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firm = ["migrations/*.sql", "dashboard/*.html", "dashboard/next/*.html", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
